--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ footer{
   
       <!-- Nút có liên kết -->  
       <div class="led-btn" onclick="window.open('https://www.facebook.com/nguyen.cong.danh.859563')">Facebook</div>  
-      <div class="led-btn" onclick="window.open('http://www.youtube.com/@DanhNguy%E1%BB%85n-w1y')">YouTube</div>  
+      <div class="led-btn" onclick="window.open('https://m.youtube.com/@DanhNguyenCong-jl4mj')">YouTube</div>  
   
       <div class="led-btn" onclick="toggleWeb()">🌐 Website của tôi</div>  
       <div class="sub-links" id="webLinks">  
